added user login and register page

--- a/views/index.erb
+++ b/views/index.erb
@@ -1,1 +1,7 @@
-<h1>hello world</h1>
+<main>
+    <section>
+        <h3>The Social Network for artists.
+Join, share your arts and interact with other cool artist like you!</h3>
+    </section>
+    <button>Post Your Work!</button> 
+</main>
