--- a/views/layout.erb
+++ b/views/layout.erb
@@ -2,12 +2,20 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Hello World</title>
+  <title>Artzy</title>
   <link rel='stylesheet' href='/stylesheets/main.css'>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-
+  <header>
+    <h1>Artzy</h1>
+    <div class="nav-bar">
+      <a href="/">home</a>
+      <a href="/about">about</a>
+      <a href="/users">login</a>
+    </div>
+  </header>
+  
   <%= yield %>
 
 </body>
