--- a/views/login.erb
+++ b/views/login.erb
@@ -2,12 +2,17 @@
 <div>
     <h1>LOGIN</h1>
 
-    <form action="/">
+    <% if params[:login_fail] == 'true' %>
+       <p>Incorrect login details, try again!</p> 
+    <% end %>
+
+
+    <form action="/users/session" method="post">
         <label for="">email:</label>
         <input type="email" name="email">
 
         <label for="">password:</label>
-        <input type="text" name="password">
+        <input type="password" name="password">
 
         <button>login</button>
     </form>
