--- a/views/register.erb
+++ b/views/register.erb
@@ -12,6 +12,7 @@
         <input type="password" name="password">
 
         <button>register</button>
+        <p>Already a member? <a href="/users">Log in</a></p>
     </form>
 
 </div>
