--- a/views/index.erb
+++ b/views/index.erb
@@ -1,7 +1,12 @@
-<main>
-    <section>
-        <h3>The Social Network for artists.
-Join, share your arts and interact with other cool artist like you!</h3>
+<div id="row" class="row d-flex justify-content-center">
+    <section class="col-md-4">
+        <p class="content-par">The Social Network for artists. <br>
+Join, share your arts and interact with other cool artist like you!</p>
     </section>
-    <button>Post Your Work!</button> 
-</main>
+</div>
+<div class="row d-flex justify-content-center">
+    <div class="post-btn-wrapper">
+        <img class="post-img" src="/images/btn-animation.gif" alt="">
+        <a class="post-link" href="/users">Post Your Work!</a>
+    </div>
+</div>
