--- a/views/layout.erb
+++ b/views/layout.erb
@@ -3,44 +3,57 @@
 <head>
   <meta charset="UTF-8">
   <title>Artzy</title>
-  <link rel='stylesheet' href='/stylesheets/main.css'>
+  <link href="https://fonts.googleapis.com/css2?family=Comforter+Brush&family=Poiret+One&display=swap" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <link rel='stylesheet' href="/stylesheets/main.css">
+  <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+  <script src="/javascripts/application.js"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-  <header>
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-
-    <h1>Artzy</h1>
-    <div class="nav-bar">
-      <a href="/">home</a>
-      <a href="/about">about</a>
-      <% if logged_in? %>
-        <a href="/users/arts">profile</a>
-        <a href="/arts/new">post art</a>
-      <% else %>
-        <a href="/users">login</a>
-      <% end %>
-    </div>
-    
+  <div class="app">
+    <header>
     <% if logged_in? %>
-      <div class="dropdown">
-        <img class="user-icon" src="/images/user.png" style="width:20px;" alt="" srcset="">
-        <p class="user-name"><strong><%= current_user.name %></strong></p>
-
-        <div class="dropdown-content">
-          <form action="/users/session" method="post">
-            <input type="hidden" name="_method" value="delete">
-            <button class="dropdown-content">logout</button>
-          </form> 
-        </div>
-      </div>  
+      <div class="profile">
+          <img class="user-icon" src="/images/user.png" alt="" srcset="">
+          <div class="user-name"><strong><%= current_user.name %></strong></div>
+          <div class="hide">
+            <form action="/users/session" method="post">
+              <input type="hidden" name="_method" value="delete">
+              <button class="btn-logout">logout</button>
+            </form> 
+          </div>
+      </div> 
     <% end %>
-
+    <h1 class="logo">Artzy</h1>
+    <ul class="nav justify-content-center">
+      <li class="nav-item">
+        <a class="nav-link active" aria-current="page" href="/">home</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/about">about</a>
+      </li>
+      <% if logged_in? %>
+        <li class="nav-item">
+          <a class="nav-link"  href="/users/arts">profile</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/arts/new">post art</a>
+        </li> 
+      <% else %>
+        <li class="nav-item">
+          <a class="nav-link" href="/users">login</a>
+        </li>
+      <% end %>
+    </ul>
   </header>
   
+
   <%= yield %>
 
+  </div>
 </body>
 </html>
