--- a/views/profile.erb
+++ b/views/profile.erb
@@ -1,13 +1,16 @@
 
-<h2>Your Gallery</h2>
-
-<section class="arts">
-
-    <% arts.each do |art| %>
-        <img src="<%= art["image_url"] %>" alt="<%= art["name"] %>" >
-        <h2>
-            <a href="/arts/<%= art["id"] %>"><%= art["name"] %></a>
-        </h2>
-    <% end %> 
-
-</section>
+<div class="gallery-container">
+    <h3>Your Gallery</h3>
+    <div class="container">
+        <div class="row">
+            <% arts.each do |art| %>
+                <div class="col">
+                    <img src="<%= art["image_url"] %>" alt="<%= art["name"] %>" class="art-img">
+                    <p>
+                        <a href="/arts/<%= art["id"] %>"><%= art["name"] %></a>
+                    </p>
+                </div>
+            <% end %> 
+        </div>
+    </div>
+</div>
