--- a/views/register.erb
+++ b/views/register.erb
@@ -1,18 +1,22 @@
-<div>
-    <h1>Register</h1>
+<div class="row d-flex justify-content-center" >
+    <div id="form"  class="col-md-5">
+        <h3>Register</h3>
 
-    <form action="/users" method="post">
-        <label for="">name:</label>
-        <input type="text" name="name">
-
-        <label for="">email:</label>
-        <input type="email" name="email">
-
-        <label for="">password:</label>
-        <input type="password" name="password">
-
-        <button>register</button>
+        <form action="/users" method="post">
+            <div class="form-floating mb-3">
+                <input name="name" type="text" class="form-control" id="floatingInput" required>
+                <label for="floatingInput">Name</label>
+            </div>
+            <div class="form-floating mb-3">
+                <input name="email" type="email" class="form-control" id="floatingInput" placeholder="name@example.com" required>
+                <label for="floatingInput">Email address</label>
+            </div>
+            <div class="form-floating">
+                <input name="password" type="password" class="form-control" id="floatingPassword" placeholder="Password" required>
+                <label for="floatingPassword">Password</label>
+            </div>
+            <button class="btn-form">register</button>
+        </form>
         <p>Already a member? <a href="/users">Log in</a></p>
-    </form>
-
+    </div>
 </div>
