--- a/views/show.erb
+++ b/views/show.erb
@@ -1,11 +1,11 @@
 
-<h1><%= art["name"] %></h1>
+<h2><%= art["name"] %></h2>
 
-<img src="<%= art["image_url"] %>" alt="<%= art["name"] %>" >
+<img class="show-art-img" src="<%= art["image_url"] %>" alt="<%= art["name"] %>" >
 
 <form action="/arts/<%= art['id'] %>" method="post">
     <input type="hidden" name="_method" value="delete">
-    <button>remove</button>
+    <button class="remove-btn">remove</button>
 </form>
 
-<a href="/arts/<%= art['id']%>/edit">update</a>
+<a href="/arts/<%= art['id']%>/edit">edit</a>
