--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,40 +1,144 @@
+body {
+  background-image: url("/images/bg1.jpg");
+  background-size: cover;
+  font-family: 'Poiret One', cursive;
+}
 
+.app {
+  width: 65%;
+  height: 80%;
+  margin: 0 auto;
+  box-sizing: border-box;
+  background-color: rgba(255, 255, 255, 0.7);
+  padding: 10px 50px;
+  margin-top: 20px;
+}
+
+header {
+  text-align: center;
+  border-bottom: black 1px solid;
+}
+
+.logo {
+  font-family: 'Comforter Brush', cursive;
+  font-size: 80px;
+}
+.nav-link {
+  color: black;
+}
+
+#form {
+  background-image: url("/images/form-bg.png");
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
+  height: 400px;
+  text-align: center;
+  margin-top: 10px;
+  padding: 40px 60px;
+}
+
+.btn-form {
+  margin: 15px auto;
+  border: none;
+  background-color: #000;
+  color: #fff;
+  padding: 5px 24px;
+}
+
+.btn-form:hover {
+  background-color: #fff;
+  color: #000;
+}
+
+#row {
+  margin-top: 50px;
+}
+
+.art-img {
+  width: 300px;
+  height: 200px;
+}
+
+.show-art-img {
+  width: 100%;
+  height: 400px;
+}
 
 .user-name {
-    text-decoration: underline;
+  display: inline;
+  text-decoration: underline;
 }
 
 .user-icon {
-    width: 10px;
-    height: 10px;
+    width: 20px;
+    height: 20px;
 }
 
-.dropdown {
-    float: right;
-    overflow: hidden;
+.profile {
+  text-align: right;
+  /* overflow: hidden; */
+}
+
+.content-par {
+  font-size: 20px;
+}
+ 
+.nav > a:active {
+  text-decoration: underline;    
+}
+
+/* .hide {
+  display: none;
+}
+
+.user-name:hover + .hide {
+  display: block;
 }
 
 .dropdown-content {
     display: none;
-    position: absolute;
+    /* position: absolute;
     background-color: #f9f9f9;
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-  }
+    z-index: 1; 
+  } */
 
-  .dropdown-content {
+  /* .dropdown-content {
     float: none;
     color: black;
     padding: 12px 16px;
     display: block;
     text-align: left;
-  }
+  } */
 
-  .dropdown-content:hover {
-    background-color: #ddd;
-  }
-  
-  .dropdown:hover .dropdown-content {
-    display: block;
-  }
+
+.post-btn-wrapper {
+  display: block;
+  position: relative;
+  text-align: center;
+  height: 50px;
+  width: 300px;
+  margin: 10px auto;
+}
+
+.post-img {
+    /* position: relative; */
+    /* height: 50px; */
+    width: 100%;
+    /* cursor: pointer; */
+}
+
+.post-link {
+    font-size: 20px;
+    position: absolute; 
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: #000;
+    font-weight: bold;
+}
+
+.gallery-container {
+  margin-top: 20px;
+}
