--- a/views/profile.erb
+++ b/views/profile.erb
@@ -1,8 +1,8 @@
 
 <div class="gallery-container">
-    <h3>Your Gallery</h3>
+    <h4>Your Gallery</h4>
     <div class="container">
-        <div class="row">
+        <div class="row gx-1">
             <% arts.each do |art| %>
                 <div class="col">
                     <img src="<%= art["image_url"] %>" alt="<%= art["name"] %>" class="art-img">
