--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -119,7 +119,7 @@ header {
   position: relative;
   text-align: center;
   height: 50px;
-  width: 300px;
+  width: 340px;
   margin: 10px auto;
 }
 
@@ -131,13 +131,14 @@ header {
 }
 
 .post-link {
-    font-size: 20px;
-    position: absolute; 
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    color: #000;
-    font-weight: bold;
+  font-family: 'Permanent Marker', cursive;
+  font-size: 20px;
+  position: absolute; 
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: #000;
+  font-weight: bold;
 }
 
 .gallery-container {
