--- a/views/layout.erb
+++ b/views/layout.erb
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>Artzy</title>
   <link href="https://fonts.googleapis.com/css2?family=Comforter+Brush&family=Poiret+One&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <link rel='stylesheet' href="/stylesheets/main.css">
   <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
