--- a/views/index.erb
+++ b/views/index.erb
@@ -14,6 +14,7 @@
 <br>
 <br>
 <br>
+<div class="extra-line"></div>
 <div class="gallery-container">
     <h4>Gallery</h4>
     <div class="container">
